# Jaccard

./: CMakeLists.txt  README.md
include/: algorithm.h  define.h  io.h
src/: algorithm.cpp  io.cpp  main.cpp
